Add update function to backend
