# apps/growup-backend/src/controllers/plants.ts
@@ -1,6 +1,6 @@
 import { IPlant } from "@grow-up/types";
 import { inject } from "inversify";
-import { Controller, Get, Route, Tags, Response, Path } from "tsoa";
+import { Controller, Get, Route, Tags, Response, Path, Body, Put } from "tsoa";
 import { NotFoundError, UnauthorizedError } from "../errors";
 import { LoggingHelper } from "../helpers/logging_helper";
 import { ProvideSingleton } from "../ioc/ioc";
@@ -28,5 +28,15 @@ export class PlantsController extends Controller {
   @Response<UnauthorizedError>(401, "Request not authorized.")
   getAllPlants(): Promise<Array<IPlant>> {
     return this.plantsService.getAllPlants();
+  }
+
+  @Put("/:plantId")
+  @Response<NotFoundError>(404, "Record not found.")
+  @Response<UnauthorizedError>(401, "Request not authorized.")
+  updatePlant(
+    @Path() plantId: string,
+    @Body() plant: Omit<IPlant, "_id">
+  ): Promise<IPlant> {
+    return this.plantsService.updatePlant(plantId, plant);
   }
 }
